--- a/index.css
+++ b/index.css
@@ -354,3 +354,10 @@ font-family: 'Archivo', sans-serif;
 padding-top: 1em;
 padding-bottom: 1em;
 }
+
+@media (width: 414px) {
+  .privacy {
+ margin-top: 0.8em;
+ width: 7em;
+  }
+  }
