--- a/index.css
+++ b/index.css
@@ -355,7 +355,7 @@ padding-top: 1em;
 padding-bottom: 1em;
 }
 
-@media (width: 414px) {
+@media (max-width: 414px) {
   .privacy {
  margin-top: 0.8em;
  width: 7em;
