--- a/who-we-are.css
+++ b/who-we-are.css
@@ -163,3 +163,178 @@ font-weight: 600;
     font-weight: 600;
     padding-left: 1em;
 }
+#questions{
+  display: none;
+}
+
+
+.desktop{
+  display: none;
+  }
+
+  #desktop-copy{
+    display: none;
+  }
+
+/* @media query */
+
+@media (min-width: 960px){
+
+.wwa{
+  height: 36em;
+  width: 100%;
+  z-index: 0;
+
+  
+}
+.describeus{
+  text-align: left;
+  max-width: 800px;
+  padding-left: 15em;
+  line-height: 100%;
+}
+
+.describeus p{
+  font-size: 1em;
+}
+
+.best-service{
+background-color: #FFFFFF;
+box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+border-radius: 8px;
+margin-top: 2em;
+max-width: 800px !important;
+height: 10em;
+margin-left: auto;
+margin-right: auto;
+width: 100%;
+z-index: 1000;
+position: relative;
+
+}
+.MandV {
+display: flex;
+gap: 3em;
+justify-content: center;
+padding-top: 5em;
+}
+
+.title{
+  padding-left: 9.5em !important;
+  padding-top: 5em;
+}
+
+.core-critics{
+  width: 70%;
+  /* gap: 1em; */
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  padding-left: 3em;
+  justify-content: left;
+  margin-left: 10em;
+}
+
+.core-critics .card{
+  width: 16rem !important;
+  /* justify-content: center; */
+  
+  margin-right: auto;
+}
+
+/* accordion styling */
+.accordion-container{
+  display: none;
+}
+
+#questions{
+  display: block;
+}
+
+.accordion-item{
+  width: 45rem !important;
+  
+}
+.accordion-content{
+  padding-top: 1em;
+}
+
+.accordion-header h5{
+font-family: 'Clash Grotesk', sans-serif;
+font-size: 1em;
+font-weight: 600;
+letter-spacing: 0em;
+text-align: left;
+color: #091E42;
+}
+
+.faq{
+  text-align: center;
+  font-size: 1.7em;
+}
+
+.accordion-icon-down {
+   border: solid #091E42;
+  border-top: none;
+  border-left: none; 
+}
+
+.accordion-icon-up {
+  border: solid #091E42;
+  border-top: none;
+  border-left: none;
+}
+
+/* footer styling */
+.mobile{
+  display: none;
+
+}
+.copy{
+  display: none;
+}
+
+.desktop{
+  display: flex;
+  margin-top: 7em;
+}
+.desktop-first{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-container h4{
+  font-size: 1.1em;
+}
+.footer-container h5{
+  font-size: 0.9em;
+}
+.desktop-copy{
+display: flex;
+justify-content: space-between;
+background-color: #15294B;
+text-align: center;
+color: #FFFFFF;
+font-family: 'Archivo', sans-serif;
+padding-top: 1em;
+padding-bottom: 1em;
+    }
+
+    .desktop-copy p{
+      font-size: 0.8em;
+      padding-left: 5.5em;
+      text-align: center;
+      padding-top: 1em;
+    }
+    .desktop-copy img{
+      gap: 10px;
+      /* margin-left: -2em; */
+    }
+    .social-media{
+      display: flex;
+      gap: 10px;
+      padding-top: 1em;
+    }
+
+
+}
