--- a/data-admin.css
+++ b/data-admin.css
@@ -21,3 +21,49 @@
     font-family: 'Archivo', sans-serif;
     font-weight: 400 !important;
 }
+
+@media (min-width: 960px){
+    /* Navbar styling begins */
+    .fauxels{
+        width: 100%;
+        height: 37em;
+    }
+
+    .describedata{
+       
+        text-align: left;
+        max-width: 900px;
+        padding-left: 13em;
+        line-height: 120%;
+        margin-top: -13em;
+                     
+        }
+
+        .data-desk{
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            width: 70%;
+            /* justify-content: left; */
+            margin-left: 13.1em;
+            margin-right: auto;
+            padding-top: 3em;
+            margin-top: 10em;
+        }
+        
+        .data-desk .card{
+            width: 18rem !important;
+        }
+        
+        
+        .data-desk h5{
+            font-size: 1em;
+            margin-left: -1.7em !important;
+            width: 18em !important;
+            margin-top: -1.5em !important;
+        }
+
+        #data-consult{
+            margin-left: 12.5em !important;
+        }
+}
