--- a/index.css
+++ b/index.css
@@ -158,12 +158,12 @@ a.dropdown-item:hover{
 }
 
 #barDropdown.nav-link.dropdown-toggle::after {
-  margin-left: 10.3em !important;
+  /* margin-left: 10.3em !important; */
 }
 
 .nav-contact{
 margin-top: 2em!important;
-margin-left: 2em;
+margin-left: 3em;
 }
 .Strength{
     display: flex;
@@ -489,7 +489,7 @@ padding-bottom: 1em;
   display: none;
   }
 
-  #desktop-copy{
+  .desktop-copy{
     display: none;
   }
 @media (max-width: 414px) {
@@ -512,28 +512,28 @@ padding-bottom: 1em;
 @media (min-width: 960px){
   /* Navbar styling begins */
   .chevdown{
-    display: none !important;
-    margin-left: 1em !important;
+    display: none;
+    margin-left: 0.1em !important;
 
   }
   .chevdown2{
     display: none;
-    margin-left: 1em !important;
+    margin-left: 0.1em !important;
   }
 
   .chevdown3{
     display: none;
-    margin-left: 1em !important;
+    margin-left: 0.1em !important;
   }
 .chevup{
-  margin-left: 1em !important;
+  margin-left: 0.1em !important;
 }
 .chevup2{
-  margin-left: 1em !important;
+  margin-left: 0.1em !important;
   
 }
 .chevup3{
-  margin-left: 1em !important;
+  margin-left: 0.1em !important;
 }
 
   .Pricing{
@@ -541,21 +541,40 @@ padding-bottom: 1em;
   }
 
 
+  #barDropdown.nav-link.dropdown-toggle::after {
+    /* margin-left: 10.3em !important; */
+    width: 1px;
+    margin-left: 6em !important;
+  }
+  
+  #navDropdown.nav-link.dropdown-toggle::after {
+    /* margin-left: -3em !important; */
+    width: 1px;
+  
+  }
+  
   .navbar {
     display: flex;
     justify-content: space-between;
+
+  }
+
+  .container-fluid{
+    margin-left: 10em;
   }
 
   .navbar img {
     width: 10em;
+    margin-top: 0.8em !important;
   }
   .nav-item{
     padding-top: 1em;
-    padding-left: 2em;
+    padding-left: 1em;
   }
   
   .navbar button.Pricing {
-    margin-left: 13em !important;
+    margin-left: 6em !important;
+    margin-top: 0.6em;
   }
 
   .navbar-collapse {
@@ -574,7 +593,7 @@ padding-bottom: 1em;
   }
 
   .navbar-nav .nav-link {
-    padding: 0.5em;
+    /* padding: 0.5em; */
   }
 
   .navbar-nav .dropdown-menu {
@@ -587,15 +606,15 @@ padding-bottom: 1em;
     margin-left: 1em;
   }
   #navDropdown{
-    margin-left: -15em;
+    margin-left: -15.5em;
   }
 
   #barDropdown{
-    margin-left: -15em;
+    margin-left: -15.5em;
 
   }
   #bar-menu{
-    margin-left: 20em !important;
+    margin-left: 15em !important;
   }
 
   #nav-menu{
@@ -604,7 +623,7 @@ padding-bottom: 1em;
 
   .nav-contact{
      margin-top: 1em !important;
-     margin-left: -10em;
+     margin-left: -5em;
   }
 
   /* Navbar styling ends */
@@ -662,7 +681,7 @@ padding-bottom: 1em;
 /* core values card styling begins */
 
 .services{
-  padding-left: 2.5em;
+  padding-left: 3.5em;
 }
 .superior{
   font-size: 0.6em !important;
@@ -679,15 +698,15 @@ padding-bottom: 1em;
 .card-service{
   display: flex;
   width: 90%;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
   /* gap: 13px; */
 }
 
 .card-service .card{
-  width: 19rem !important;
+  width: 17rem !important;
   height: 19rem;
-  margin-left: 1em !important;
+  margin-right: -4em !important;
   
 
 }
@@ -725,13 +744,14 @@ padding-bottom: 1em;
 }
 .we-are{
   display: flex;
-  padding-left: 2.5em;
+  padding-left: 4.5em;
   padding-top: 2em;
   background-image: url(assets/gradient.png) !important;
   height: 35em;
   backdrop-filter: blur(78.7544px);
   background-position: left ;
 background-size: 200%;
+padding-right: 4em !important;
 }
 
 .we-are .who{
@@ -770,7 +790,7 @@ background-size: 200%;
   color: #005696 !important;
   font-size: 2em;
   line-height: 110%;
-  padding-left: 2em;
+  padding-left: 3em;
 }
 .hover:hover{
   pointer-events: none;
@@ -778,6 +798,7 @@ background-size: 200%;
 .card-news{
   display: flex;
   width: 80%;
+  margin-left: -4em !important;
   
 }
 
@@ -825,6 +846,8 @@ height: 27em;
 .desktop{
   display: flex;
   margin-top: 7em;
+  padding-left: 10em;
+  padding-right: 10em;
 }
 .desktop-first{
   display: flex;
@@ -846,6 +869,8 @@ color: #FFFFFF;
 font-family: 'Archivo', sans-serif;
 padding-top: 1em;
 padding-bottom: 1em;
+padding-left: 6em;
+padding-right: 7.5em;
     }
 
     .desktop-copy p{
