--- a/lead.css
+++ b/lead.css
@@ -28,3 +28,59 @@
     font-size: 1.6em;
     font-weight: bold;
 }
+
+@media (min-width: 960px){
+    /* Navbar styling begins */
+    .lmd{
+        width: 100%;
+        height: 36em;
+    }
+
+    .describelead{
+       
+    text-align: left;
+    max-width: 900px;
+    padding-left: 13em;
+    line-height: 100%;
+    margin-top: -13em;
+    padding-right: 3em;
+                 
+    }
+
+    .subdesoffice{
+        padding-top: 7em !important;
+        padding-left: 9em !important;
+        padding-right: 9em;
+    }
+
+    .LGS{
+        padding-left: 8.9em;
+        padding-top: 4em;
+    }
+
+    .card-desk{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        width: 70%;
+        /* justify-content: left; */
+        margin-left: 13.1em;
+        margin-right: auto;
+    }
+
+    .card-desk .card{
+        width: 18rem !important;
+    }
+
+
+    .card-desk h5{
+        font-size: 1em;
+        margin-left: -1.7em !important;
+        width: 18em !important;
+        margin-top: -1.5em !important;
+    }
+
+    #desktop-consult{
+        margin-left: 7em !important;
+    }
+}  
