--- a/network.css
+++ b/network.css
@@ -1,11 +1,11 @@
-.pexels{
+.fauxels{
     height: 17.2em;
     z-index: 0;
   }
-  .describeweb{
+  .describenetwork{
     padding-top: 2em;
     padding-right: 3em !important;
-    margin-top: -15.6em;
+    margin-top: -13.6em;
     max-width: 400px;
     margin-left: 1em;
     position:relative;
@@ -13,51 +13,35 @@
     color: #FFFFFF;
     padding-bottom: 1.3em;
 }
-.describeweb h2{
+.describenetwork h2{
     font-family: 'Clash Grotesk', sans-serif;
     font-size: 2em;
 }
-.describeweb p{
+.describenetwork p{
     font-family: 'Archivo', sans-serif;
     font-weight: 400 !important;
 }
-.consult{
-height: 54px;
-width: 388px;
-left: 20px;
-top: 1978px;
-border-radius: 4px;
-padding: 16px 24px 16px 24px;
-background-color: #0047B3;
-border: none;
-color: #FFFFFF;
-margin-left: 1.3em !important;
-margin-right: auto !important;
-margin-top: 3em;
-margin-bottom: 3em;
-font-family: 'Clash Grotesk', sans-serif;
 
-}
 
 
 @media (min-width: 960px){
     /* Navbar styling begins */
-    .pexels{
+    .fauxels{
         width: 100%;
         height: 37em;
     }
 
-    .describeweb{
+    .describenetwork{
        
         text-align: left;
         max-width: 900px;
-        padding-left: 13em;
-        line-height: 100%;
+        padding-left: 10em;
+        line-height: 120%;
         margin-top: -13em;
                      
         }
 
-        .web-desk{
+        .network-desk{
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             grid-template-rows: repeat(2, 1fr);
@@ -69,19 +53,19 @@ font-family: 'Clash Grotesk', sans-serif;
             margin-top: 10em;
         }
         
-        .web-desk .card{
+        .network-desk .card{
             width: 18rem !important;
         }
         
         
-        .web-desk h5{
+        .network-desk h5{
             font-size: 1em;
             margin-left: -1.7em !important;
             width: 18em !important;
             margin-top: -1.5em !important;
         }
 
-        #web-consult{
+        #network-consult{
             margin-left: 12.5em !important;
         }
 }
