--- a/blog.css
+++ b/blog.css
@@ -2,7 +2,7 @@
     padding-top: 2em;
     padding-right: 3em !important;
     margin-top: -7.6em;
-    max-width: 400px;
+    max-width: 500px;
     margin-left: 1em;
     position:relative;
     z-index: 10000;
@@ -60,3 +60,133 @@
   .fa{
     color: #0047B3;
   }
+.desktop-blog{
+  display: none;
+}
+
+
+  @media (min-width: 960px){
+  
+
+    .describeblog{
+      padding-left: 12.3em;
+      margin-top: -17em;
+      width: 70em !important;
+    }
+
+ .blog-h5{
+font-family: 'Archivo', sans-serif;
+font-style: normal;
+font-weight: 600;
+font-size: 19px;
+color: #091E42;
+margin-left: 2.3em;
+/* width: 8em; */
+cursor: pointer;
+    }
+
+    .blog-h5:hover{
+      border-bottom: 2px solid #0047B3;  
+     
+    }   
+    
+    
+    .blog-h5:active{
+      border-bottom: 2px solid #0047B3;  
+     
+    }
+    .mobile-blog{
+      display:none
+    }
+    .desktop-blog{
+      background-color: #FFFFFF;
+      width:70%;
+      border-radius: 24px;
+      margin-right: auto;
+      margin-left: auto ;
+      padding-top: 2em;
+      padding-bottom: 2em;
+      display: block;
+      z-index: 1000;
+      position: relative;
+      margin-top: 25em;
+    
+
+  
+    }
+
+    .closeup{
+      /* width: 100%; */
+      height: 37em;
+      z-index: 0;
+    }
+
+    .desktop-blog .card{
+      display: flex !important;
+      margin-left: 2em;
+      margin-right: auto;
+      
+    }
+
+
+    .desktop-blog img{
+      height: 14.3em;
+      border-radius: 10px;
+      width: 37em !important;
+      
+    }
+    .list-group{
+      gap: 5em;
+      margin-top: -1.3em;
+    }
+    body{
+      background-color: #C4C4C4;
+    }
+    
+    .blog-grid{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 2px;
+    }
+    .blog-grid .card{
+      height: 23em !important;
+      margin-left: 2em;
+    }
+    .blog-grid img{
+      width: 16.7rem !important;
+      height: 10em;
+    }
+
+    .blog-grid .list-group{
+      margin-top: -2em !important;
+      width: 21.5em;
+      font-size: 0.8em;
+      gap: 4em;
+      margin-bottom: 3em !important;
+    }
+    
+.search input[type=text] {
+  width: 50%;
+  border: none;
+}
+.search{
+  /* margin-top: -5em !important; */
+  z-index: 1000;
+  margin-top: -25em;
+  position: relative;
+  margin-left: 45em;
+
+}
+
+.search button {
+  width: 15%;
+  border: none;
+}
+
+#desktop-nav{
+  display: block;
+  width: 100%;
+}
+
+}  
